--- a/Positioner/package.json
+++ b/Positioner/package.json
@@ -16,6 +16,7 @@
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "fabric": "^5.3.0",
+    "lodash-move": "^1.1.1",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
